- fixed label color contrasts

--- a/NEMO/static/nemo.css
+++ b/NEMO/static/nemo.css
@@ -285,6 +285,15 @@ div.fc-ltr .fc-time-grid .fc-event-container
 	margin-right: 15px;
 }
 
+/* Override Bootstrap's media and media-body CSS settings so that the
+Twitter Typeahead autocomplete dropdown menu isn't chopped off. */
+.media, .media-body
+{
+	overflow: visible;
+	min-height: 35px;
+}
+
+
 /* Twitter typeahead styles */
 .twitter-typeahead
 {
@@ -308,14 +317,6 @@ div.fc-ltr .fc-time-grid .fc-event-container
 	box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 	max-height: 150px;
 	overflow-y: auto;
-}
-
-/* Override Bootstrap's media and media-body CSS settings so that the
-Twitter Typeahead autocomplete dropdown menu isn't chopped off. */
-.media, .media-body
-{
-	overflow: visible;
-	min-height: 35px;
 }
 
 /* The suggestion style encases the matching part of the query in each of the search results. */
@@ -1086,7 +1087,7 @@ li.area-tree-node a, li.area-tree-node a:hover, li.area-tree-node a:focus
 .table > tbody > tr.default > th,
 .table > tfoot > tr.default > th
 {
-  background-color: #ffffff;
+  	background-color: #ffffff;
 }
 
 .table-striped > thead > tr:nth-of-type(odd) > td.default,
@@ -1102,7 +1103,7 @@ li.area-tree-node a, li.area-tree-node a:hover, li.area-tree-node a:focus
 .table-striped > tbody > tr.default:nth-of-type(odd) > th,
 .table-striped > tfoot > tr.default:nth-of-type(odd) > th
 {
-  background-color: #f9f9f9;
+  	background-color: #f9f9f9;
 }
 
 .table-hover > tbody > tr > td.default:hover,
@@ -1111,5 +1112,16 @@ li.area-tree-node a, li.area-tree-node a:hover, li.area-tree-node a:focus
 .table-hover > tbody > tr:hover > .default,
 .table-hover > tbody > tr.default:hover > th
 {
-  background-color: #f5f5f5;
+  	background-color: #f5f5f5;
+}
+
+/* Better contrast for labels */
+.label-success
+{
+  	background-color: #008000;
+}
+
+.label-danger
+{
+	background-color: #dc143c;
 }
